fixed min-width issue on mobile

--- a/style-mobile.css
+++ b/style-mobile.css
@@ -81,7 +81,7 @@ section {
     margin: auto;
     font-size: 14pt;
     padding: 15px;
-    min-width: 350px;
+    min-width: 320px;
 }
 .textbox span {
    font-family: 'district-thin', sans-serif;
